@@ -1,3 +1,7 @@
+2005-04-28 Toady <toady@gscore.org>
+
+	* src/staff.c: improved key signature
+	
 2005-04-26 Toady <toady@gscore.org>
 
 	* src/draw_key_signature.c, src/include/draw_key_signature.h: added
